--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "chart.js": "^3.5.1"
+        "chart.js": "^3.5.1",
+        "tui-calendar": "^1.15.1"
     }
 }
